Require Jenkins 2.479.1 or newer and Jakarta EE 9 (#184)
* Require 2.479.1 or newer

* Use Java 17 features and cleanup