@@ -1,7 +1,6 @@
 package jenkinsci.plugins.influxdb.generators.serenity;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -32,6 +31,6 @@ public class SerenityJsonSummaryFile implements ISerenityJsonSummaryFile {
     }
 
     public String getContents() throws IOException {
-        return new String(Files.readAllBytes(getPath()), StandardCharsets.UTF_8);
+        return Files.readString(getPath());
     }
 }
